--- a/com.prairie.eevernote/src/messages.properties
+++ b/com.prairie.eevernote/src/messages.properties
@@ -32,3 +32,5 @@ EEClipperPlugin.ActionDelegate.ClipScreenshotToEvernote.OutOfDateMessage=\ is ou
 EEClipperPlugin.ActionDelegate.ClipScreenshotToEvernote.Hint=Double click to clip, right-click/Esc to escape
 
 EEClipperPlugin.EEClipperImpl.Exception.Message=Evernote SDK is Out Of Date
+
+EEClipperPlugin.EvernoteException.EDAMNotFoundException.Message=unable to find configured {1}, please select a valid one in configurations.
