--- a/com.prairie.eevernote/src/messages.properties
+++ b/com.prairie.eevernote/src/messages.properties
@@ -1,36 +1,60 @@
-EEClipperPlugin.ConfigurationsDialog.Shell.Title=Clip Configurations
-EEClipperPlugin.HotInputDialog.Shell.Title=Quick Organize
+# Messages #
+Plugin.Configurations.Shell.Title=Clip Configurations
+Plugin.Configurations.Hotset.Shell.Title=Quick Organize
+Plugin.Configurations.Title=OAuth, organize configurations
+Plugin.Configurations.Message=Configure required token and optional organize on a global level
+Plugin.Configurations.OAuth=OAuth
+Plugin.Configurations.Token=Authentication token
+Plugin.Configurations.Organize=Organize
+Plugin.Configurations.Notebook=Notebook
+Plugin.Configurations.Note=Note
+Plugin.Configurations.Tags=Tags
+Plugin.Configurations.Notebook.HintMessage=type text(autosuggest) to select notebook
+Plugin.Configurations.Note.HintMessage=type text(autosuggest) to select note, clipped content will be inserted to the head
+Plugin.Configurations.Tags.HintMessage=type text(autosuggest) to add tags, multiple tags are comma separated
+Plugin.Configurations.Token.HintMessage=click the link to the left to authenticate to Evernote account
+Plugin.Configurations.Comments=Comments
+Plugin.Configurations.Refresh=Refresh
+Plugin.Configurations.TokenNotConfigured.Message=Token is not configured, please first configure token in Configurations dialog.
+Plugin.Configurations.TokenNotConfigured.Configure=Configure...
+Plugin.Configurations.Authenticating=Authenticating...
+Plugin.Configurations.FetchingNotebooks=Fetching notebooks...
+Plugin.Configurations.FetchingNotes=Fetching notes...
+Plugin.Configurations.FetchingTags=Fetching tags...
+Plugin.Configurations.ClickToAuth=click to authenticate to Evernote account
 
-EEClipperPlugin.ConfigurationsDialog.Title=OAuth, organize configurations
-EEClipperPlugin.ConfigurationsDialog.Message=Configure required token and optional organize on a global level
+Plugin.Runtime.AddFileToEvernote.Message=Clipping file(s)...
+Plugin.Runtime.AddFileToEvernote.Subtask.Message=Transferring data...
+Plugin.Runtime.AddFileToEvernote.OutOfDateMessage=\ is out of date. Please upgrade to the latest version.
 
-EEClipperPlugin.Configurations.OAuth=OAuth
-EEClipperPlugin.Configurations.Token=Authentication token
-EEClipperPlugin.Configurations.EvernotePreferences=Organize
-EEClipperPlugin.Configurations.Notebook=Notebook
-EEClipperPlugin.Configurations.Note=Note
-EEClipperPlugin.Configurations.Tags=Tags
-EEClipperPlugin.Configurations.Notebook.HintMessage=type text(autosuggest) to select notebook
-EEClipperPlugin.Configurations.Note.HintMessage=type text(autosuggest) to select note, clipped content will be inserted to the head
-EEClipperPlugin.Configurations.Tags.HintMessage=type text(autosuggest) to add tags, multiple tags are comma separated
-EEClipperPlugin.Configurations.Token.HintMessage=click the link to the left to authenticate to Evernote account
-EEClipperPlugin.Configurations.Comments=Comments
-EEClipperPlugin.Configurations.ErrorOccurred=Error Occurred
-EEClipperPlugin.Configurations.Refresh=Refresh
+Plugin.Runtime.AddSelectionToEvernote.Message=Clipping selection...
+Plugin.Runtime.AddSelectionToEvernote.Subtask.Message=Transferring data...
+Plugin.Runtime.AddSelectionToEvernote.OutOfDateMessage=\ is out of date. Please upgrade to the latest version.
 
-EEClipperPlugin.ActionDelegate.AddFileToEvernote.Message=Clipping file(s)...
-EEClipperPlugin.ActionDelegate.AddFileToEvernote.Subtask.Message=Transferring data...
-EEClipperPlugin.ActionDelegate.AddFileToEvernote.OutOfDateMessage=\ is out of date. Please upgrade to the latest version.
+Plugin.Runtime.ClipScreenshotToEvernote.Message=Clipping selection...
+Plugin.Runtime.ClipScreenshotToEvernote.Subtask.Message=Transferring data...
+Plugin.Runtime.ClipScreenshotToEvernote.OutOfDateMessage=\ is out of date. Please upgrade to the latest version.
+Plugin.Runtime.ClipScreenshotToEvernote.Hint=Double click to clip, right-click/Esc to escape
 
-EEClipperPlugin.ActionDelegate.AddSelectionToEvernote.Message=Clipping selection...
-EEClipperPlugin.ActionDelegate.AddSelectionToEvernote.Subtask.Message=Transferring data...
-EEClipperPlugin.ActionDelegate.AddSelectionToEvernote.OutOfDateMessage=\ is out of date. Please upgrade to the latest version.
+Plugin.Runtime.AuthExpired.Message=EEvernote is no longer authorized to access your Evernote account. (Click/Tap) below to re-authorize EEvernote
+Plugin.Runtime.AuthExpired.Title=Auth Expired
+Plugin.Runtime.CreateNewNote=No existing note found, will create a new one.
+Plugin.Runtime.ClipToDefault=No existing notebook found, will clip to default.
+Plugin.Runtime.CreateNewNoteWithGivenName=No existing note found, will create a new one with given name {1}.
 
-EEClipperPlugin.ActionDelegate.ClipScreenshotToEvernote.Message=Clipping selection...
-EEClipperPlugin.ActionDelegate.ClipScreenshotToEvernote.Subtask.Message=Transferring data...
-EEClipperPlugin.ActionDelegate.ClipScreenshotToEvernote.OutOfDateMessage=\ is out of date. Please upgrade to the latest version.
-EEClipperPlugin.ActionDelegate.ClipScreenshotToEvernote.Hint=Double click to clip, right-click/Esc to escape
+Plugin.Error.Occurred=Error Occurred
+Plugin.Error.OutOfDate=Evernote SDK is Out Of Date
+Plugin.Throwable.NotFatal.Message=, but not fatal, you can continue.
+Plugin.Throwable.LinkNotOpenable.Message=Problem occurred when open hyper-link, please copy the link: {1} to browser to continue.
 
-EEClipperPlugin.EEClipperImpl.Exception.Message=Evernote SDK is Out Of Date
-
-EEClipperPlugin.EvernoteException.EDAMNotFoundException.Message=unable to find configured {1}, please select a valid one in configurations.
+# DOM #
+Plugin.DOM.Error0=the type of node being imported is not supported
+Plugin.DOM.Error1=the type of node being adopted is not supported
+Plugin.DOM.Error2=attribute was created from a different document than the one that created the element
+Plugin.DOM.Error3=attribute is already an attribute of another Element object. The DOM user must explicitly clone Attribute nodes to re-use them in other elements
+Plugin.DOM.Error4=attribute is not an attribute of the element
+Plugin.DOM.Error5=An attempt was made to insert a node where it is not permitted
+Plugin.DOM.Error6=An attempt was made to insert a node which was created from a different document than the one that created this node
+Plugin.DOM.Error7=An attempt was made to reference a node in a context where it does not exist
+Plugin.DOM.Error8=offset is negative or larger than the length of this String object, or count is negative.
+Plugin.DOM.Error9=offset is negative or larger than the length of this String object
