--- a/com.prairie.eevernote/src/messages.properties
+++ b/com.prairie.eevernote/src/messages.properties
@@ -48,13 +48,16 @@ Plugin.Throwable.NotFatal.Message=, but not fatal, you can continue.
 Plugin.Throwable.LinkNotOpenable.Message=Problem occurred when open hyper-link, please copy the link: {1} to browser to continue.
 
 # DOM #
-Plugin.DOM.Error0=the type of node being imported is not supported
-Plugin.DOM.Error1=the type of node being adopted is not supported
-Plugin.DOM.Error2=attribute was created from a different document than the one that created the element
-Plugin.DOM.Error3=attribute is already an attribute of another Element object. The DOM user must explicitly clone Attribute nodes to re-use them in other elements
-Plugin.DOM.Error4=attribute is not an attribute of the element
-Plugin.DOM.Error5=An attempt was made to insert a node where it is not permitted
-Plugin.DOM.Error6=An attempt was made to insert a node which was created from a different document than the one that created this node
-Plugin.DOM.Error7=An attempt was made to reference a node in a context where it does not exist
-Plugin.DOM.Error8=offset is negative or larger than the length of this String object, or count is negative.
-Plugin.DOM.Error9=offset is negative or larger than the length of this String object
+DOM.Error0=the type of node being imported is not supported
+DOM.Error1=the type of node being adopted is not supported
+DOM.Error2=attribute was created from a different document than the one that created the element
+DOM.Error3=attribute is already an attribute of another Element object. The DOM user must explicitly clone Attribute nodes to re-use them in other elements
+DOM.Error4=attribute is not an attribute of the element
+DOM.Error5=An attempt was made to insert a node where it is not permitted
+DOM.Error6=An attempt was made to insert a node which was created from a different document than the one that created this node
+DOM.Error7=An attempt was made to reference a node in a context where it does not exist
+DOM.Error8=offset is negative or larger than the length of this String object, or count is negative.
+DOM.Error9=offset is negative or larger than the length of this String object
+
+# others #
+Throwable.IllegalArgumentException.Message=Illegal argument:
