EEvernote -> EAlways due to Evernote's trademark permission

--- a/com.prairie.eevernote/src/messages.properties
+++ b/com.prairie.eevernote/src/messages.properties
@@ -36,7 +36,7 @@ Plugin.Runtime.ClipScreenshotToEvernote.Subtask.Message=Transferring data...
 Plugin.Runtime.ClipScreenshotToEvernote.OutOfDateMessage=\ is out of date. Please upgrade to the latest version.
 Plugin.Runtime.ClipScreenshotToEvernote.Hint=Double click to clip, right-click/Esc to escape
 
-Plugin.Runtime.AuthExpired.Message=EEvernote is no longer authorized to access your Evernote account. (Click/Tap) below to re-authorize EEvernote
+Plugin.Runtime.AuthExpired.Message=EAlways is no longer authorized to access your Evernote account. (Click/Tap) below to re-authorize EAlways
 Plugin.Runtime.AuthExpired.Title=Auth Expired
 Plugin.Runtime.CreateNewNote=No existing note found, will create a new one.
 Plugin.Runtime.ClipToDefault=No existing notebook found, will clip to default.
