--- a/com.prairie.eevernote/src/messages.properties
+++ b/com.prairie.eevernote/src/messages.properties
@@ -1,10 +1,9 @@
 # Messages #
 Plugin.Configurations.Shell.Title=Clip Configurations
 Plugin.Configurations.Hotset.Shell.Title=Quick Organize
-Plugin.Configurations.Title=OAuth, organize configurations
-Plugin.Configurations.Message=Configure required token and optional organize on a global level
+Plugin.Configurations.Title=Organize configurations
+Plugin.Configurations.Message=Configure notebook, note, tags and comments on a global level.
 Plugin.Configurations.OAuth=OAuth
-Plugin.Configurations.Token=Authentication token
 Plugin.Configurations.Organize=Organize
 Plugin.Configurations.Notebook=Notebook
 Plugin.Configurations.Note=Note
@@ -12,11 +11,14 @@ Plugin.Configurations.Tags=Tags
 Plugin.Configurations.Notebook.HintMessage=type text(autosuggest) to select notebook
 Plugin.Configurations.Note.HintMessage=type text(autosuggest) to select note, clipped content will be inserted to the head
 Plugin.Configurations.Tags.HintMessage=type text(autosuggest) to add tags, multiple tags are comma separated
-Plugin.Configurations.Token.HintMessage=click the link to the left to authenticate to Evernote account
 Plugin.Configurations.Comments=Comments
 Plugin.Configurations.Refresh=Refresh
-Plugin.Configurations.TokenNotConfigured.Message=Token is not configured, please first configure token in Configurations dialog.
-Plugin.Configurations.TokenNotConfigured.Configure=Configure...
+Plugin.Configurations.TokenNotConfigured.Message=Connect Evernote to enable it in Eclipse (A authentication page will be opened in browser, please go there to authorize Eemory)?
+Plugin.Configurations.TokenNotConfigured.Configure=Connect
+Plugin.Configurations.TokenNotConfigured.NotNow=Not Now
+Plugin.Configurations.TokenNotConfigured.Cancel=Cancel
+Plugin.Configurations.TokenNotConfigured.Continue=Continue
+Plugin.Configurations.TokenNotConfigured.Waiting=Waiting for the authorization...
 Plugin.Configurations.Authenticating=Authenticating...
 Plugin.Configurations.FetchingNotebooks=Fetching notebooks...
 Plugin.Configurations.FetchingNotes=Fetching notes...
@@ -36,7 +38,7 @@ Plugin.Runtime.ClipScreenshotToEvernote.Subtask.Message=Transferring data...
 Plugin.Runtime.ClipScreenshotToEvernote.OutOfDateMessage=\ is out of date. Please upgrade to the latest version.
 Plugin.Runtime.ClipScreenshotToEvernote.Hint=Double click to clip, right-click/Esc to escape
 
-Plugin.Runtime.AuthExpired.Message=EAlways is no longer authorized to access your Evernote account. (Click/Tap) below to re-authorize EAlways
+Plugin.Runtime.AuthExpired.Message=Eemory is no longer authorized to access your Evernote account. please re-authorize Eemory
 Plugin.Runtime.AuthExpired.Title=Auth Expired
 Plugin.Runtime.CreateNewNote=No existing note found, will create a new one.
 Plugin.Runtime.ClipToDefault=No existing notebook found, will clip to default.
