--- a/com.prairie.eevernote/src/messages.properties
+++ b/com.prairie.eevernote/src/messages.properties
@@ -16,9 +16,8 @@ Plugin.Configurations.Refresh=Refresh
 Plugin.Configurations.TokenNotConfigured.Message=Connect Evernote to enable it in Eclipse (A authentication page will be opened in browser, please go there to authorize Eemory)?
 Plugin.Configurations.TokenNotConfigured.Configure=Connect
 Plugin.Configurations.TokenNotConfigured.NotNow=Not Now
-Plugin.Configurations.TokenNotConfigured.Cancel=Cancel
-Plugin.Configurations.TokenNotConfigured.Continue=Continue
 Plugin.Configurations.TokenNotConfigured.Waiting=Waiting for the authorization...
+Plugin.Configurations.TokenNotConfigured.Confirm=Have finished the authorization process and continue?
 Plugin.Configurations.Authenticating=Authenticating...
 Plugin.Configurations.FetchingNotebooks=Fetching notebooks...
 Plugin.Configurations.FetchingNotes=Fetching notes...
