--- a/com.prairie.eevernote/src/messages.properties
+++ b/com.prairie.eevernote/src/messages.properties
@@ -3,7 +3,6 @@ Plugin.Configurations.Shell.Title=Clip Configurations
 Plugin.Configurations.Hotset.Shell.Title=Quick Organize
 Plugin.Configurations.Title=Organize configurations
 Plugin.Configurations.Message=Configure notebook, note, tags and comments on a global level.
-Plugin.Configurations.OAuth=OAuth
 Plugin.Configurations.Organize=Organize
 Plugin.Configurations.Notebook=Notebook
 Plugin.Configurations.Note=Note
@@ -13,16 +12,16 @@ Plugin.Configurations.Note.HintMessage=type text(autosuggest) to select note, cl
 Plugin.Configurations.Tags.HintMessage=type text(autosuggest) to add tags, multiple tags are comma separated
 Plugin.Configurations.Comments=Comments
 Plugin.Configurations.Refresh=Refresh
-Plugin.Configurations.TokenNotConfigured.Message=Connect Evernote to enable it in Eclipse (A authentication page will be opened in browser, please go there to authorize Eemory)?
-Plugin.Configurations.TokenNotConfigured.Configure=Connect
-Plugin.Configurations.TokenNotConfigured.NotNow=Not Now
-Plugin.Configurations.TokenNotConfigured.Waiting=Waiting for the authorization...
-Plugin.Configurations.TokenNotConfigured.Confirm=Have finished the authorization process and continue?
+Plugin.Configurations.TokenNotConfigured=Connect Evernote to enable it in Eclipse (A authentication page will be opened in browser, please go there to authorize Eemory)?
+Plugin.Configurations.OAuth.Title=Authorization
+Plugin.Configurations.OAuth.Configure=Connect
+Plugin.Configurations.OAuth.NotNow=Not Now
+Plugin.Configurations.OAuth.Waiting=Waiting for the authorization...
+Plugin.Configurations.OAuth.Confirm=Have finished the authorization process and continue?
 Plugin.Configurations.Authenticating=Authenticating...
 Plugin.Configurations.FetchingNotebooks=Fetching notebooks...
 Plugin.Configurations.FetchingNotes=Fetching notes...
 Plugin.Configurations.FetchingTags=Fetching tags...
-Plugin.Configurations.ClickToAuth=click to authenticate to Evernote account
 
 Plugin.Runtime.AddFileToEvernote.Message=Clipping file(s)...
 Plugin.Runtime.AddFileToEvernote.Subtask.Message=Transferring data...
@@ -37,16 +36,15 @@ Plugin.Runtime.ClipScreenshotToEvernote.Subtask.Message=Transferring data...
 Plugin.Runtime.ClipScreenshotToEvernote.OutOfDateMessage=\ is out of date. Please upgrade to the latest version.
 Plugin.Runtime.ClipScreenshotToEvernote.Hint=Double click to clip, right-click/Esc to escape
 
-Plugin.Runtime.AuthExpired.Message=Eemory is no longer authorized to access your Evernote account. please re-authorize Eemory
-Plugin.Runtime.AuthExpired.Title=Auth Expired
+Plugin.Runtime.AuthExpired.Message=Eemory is no longer authorized to access Evernote account. Please re-authorize Eemory.
+Plugin.Runtime.AuthExpired.Title=Authorization Expired
 Plugin.Runtime.CreateNewNote=No existing note found, will create a new one.
 Plugin.Runtime.ClipToDefault=No existing notebook found, will clip to default.
 Plugin.Runtime.CreateNewNoteWithGivenName=No existing note found, will create a new one with given name {1}.
 
 Plugin.Error.Occurred=Error Occurred
-Plugin.Error.OutOfDate=Evernote SDK is Out Of Date
+Plugin.Error.OutOfDate=Evernote SDK is out of date
 Plugin.Throwable.NotFatal.Message=, but not fatal, you can continue.
-Plugin.Throwable.LinkNotOpenable.Message=Problem occurred when open hyper-link, please copy the link: {1} to browser to continue.
 
 # DOM #
 DOM.Error0=the type of node being imported is not supported
