--- a/com.prairie.eevernote/src/messages.properties
+++ b/com.prairie.eevernote/src/messages.properties
@@ -12,7 +12,7 @@ Plugin.Configurations.Note.HintMessage=type text(autosuggest) to select note, cl
 Plugin.Configurations.Tags.HintMessage=type text(autosuggest) to add tags, multiple tags are comma separated
 Plugin.Configurations.Comments=Comments
 Plugin.Configurations.Refresh=Refresh
-Plugin.Configurations.TokenNotConfigured=Connect Evernote to enable it in Eclipse (A authentication page will be opened in browser, please go there to authorize Eemory)?
+Plugin.Configurations.TokenNotConfigured=Connect Evernote to Eemory (A authentication page will be opened in browser, please go there to authorize Eemory)?
 Plugin.Configurations.OAuth.Title=Authorization
 Plugin.Configurations.OAuth.Configure=Connect
 Plugin.Configurations.OAuth.NotNow=Not Now
