use NLS to handle messages

--- a/com.prairie.eevernote/src/messages.properties
+++ b/com.prairie.eevernote/src/messages.properties
@@ -1,62 +1,61 @@
 # Messages #
-Plugin.Configurations.Shell.Title=Clip Configurations
-Plugin.Configurations.Hotset.Shell.Title=Quick Organize
-Plugin.Configurations.Title=Organize configurations
-Plugin.Configurations.Message=Configure notebook, note, tags and comments on a global level.
-Plugin.Configurations.Organize=Organize
-Plugin.Configurations.Notebook=Notebook
-Plugin.Configurations.Note=Note
-Plugin.Configurations.Tags=Tags
-Plugin.Configurations.Notebook.HintMessage=type text(autosuggest) to select notebook
-Plugin.Configurations.Note.HintMessage=type text(autosuggest) to select note, clipped content will be inserted to the head
-Plugin.Configurations.Tags.HintMessage=type text(autosuggest) to add tags, multiple tags are comma separated
-Plugin.Configurations.Comments=Comments
-Plugin.Configurations.Refresh=Refresh
-Plugin.Configurations.TokenNotConfigured=Connect Eemory to Evernote (A authentication page will be opened in browser, please go there to authorize Eemory)?
-Plugin.Configurations.OAuth.Title=Authorization
-Plugin.Configurations.OAuth.Configure=Connect
-Plugin.Configurations.OAuth.NotNow=Not Now
-Plugin.Configurations.OAuth.Waiting=Waiting for the authorization...
-Plugin.Configurations.OAuth.Confirm=Have finished the authorization process and continue?
-Plugin.Configurations.Authenticating=Authenticating...
-Plugin.Configurations.FetchingNotebooks=Fetching notebooks...
-Plugin.Configurations.FetchingNotes=Fetching notes...
-Plugin.Configurations.FetchingTags=Fetching tags...
+Plugin_Configs_Shell_Title=Clip Configurations
+Plugin_Configs_QuickOrgnize_Shell_Title=Quick Organize
+Plugin_Configs_Title=Organize configurations
+Plugin_Configs_Message=Configure notebook, note, tags and comments on a global level.
+Plugin_Configs_Organize=Organize
+Plugin_Configs_Notebook=Notebook
+Plugin_Configs_Note=Note
+Plugin_Configs_Tags=Tags
+Plugin_Configs_Notebook_Hint=type text(autosuggest) to select notebook
+Plugin_Configs_Note_Hint=type text(autosuggest) to select note, clipped content will be inserted to the head
+Plugin_Configs_Tags_Hint=type text(autosuggest) to add tags, multiple tags are comma separated
+Plugin_Configs_Comments=Comments
+Plugin_Configs_Refresh=Refresh
+Plugin_Configs_TokenNotConfigured=Connect Eemory to Evernote (A authentication page will be opened in browser, please go there to authorize Eemory)?
+Plugin_Configs_OAuth_Title=Authorization
+Plugin_Configs_OAuth_Configure=Connect
+Plugin_Configs_OAuth_NotNow=Not Now
+Plugin_Configs_OAuth_Waiting=Waiting for the authorization...
+Plugin_Configs_OAuth_Confirm=Have finished the authorization process and continue?
+Plugin_Configs_Authenticating=Authenticating...
+Plugin_Configs_FetchingNotebooks=Fetching notebooks...
+Plugin_Configs_FetchingNotes=Fetching notes...
+Plugin_Configs_FetchingTags=Fetching tags...
 
-Plugin.Runtime.AddFileToEvernote.Message=Clipping file(s)...
-Plugin.Runtime.AddFileToEvernote.Subtask.Message=Transferring data...
-Plugin.Runtime.AddFileToEvernote.OutOfDateMessage=\ is out of date. Please upgrade to the latest version.
+Plugin_Runtime_AddFileToEvernote=Clipping file(s)...
+Plugin_Runtime_AddFileToEvernote_Subtask=Transferring data...
+Plugin_Runtime_AddFileToEvernote_OutOfDate=\ is out of date_ Please upgrade to the latest version.
 
-Plugin.Runtime.AddSelectionToEvernote.Message=Clipping selection...
-Plugin.Runtime.AddSelectionToEvernote.Subtask.Message=Transferring data...
-Plugin.Runtime.AddSelectionToEvernote.OutOfDateMessage=\ is out of date. Please upgrade to the latest version.
+Plugin_Runtime_AddSelectionToEvernote=Clipping selection...
+Plugin_Runtime_AddSelectionToEvernote_Subtask=Transferring data...
+Plugin_Runtime_AddSelectionToEvernote_OutOfDate=\ is out of date. Please upgrade to the latest version.
 
-Plugin.Runtime.ClipScreenshotToEvernote.Message=Clipping selection...
-Plugin.Runtime.ClipScreenshotToEvernote.Subtask.Message=Transferring data...
-Plugin.Runtime.ClipScreenshotToEvernote.OutOfDateMessage=\ is out of date. Please upgrade to the latest version.
-Plugin.Runtime.ClipScreenshotToEvernote.Hint=Double click to clip, right-click/Esc to escape
+Plugin_Runtime_ClipScreenshotToEvernote_Message=Clipping selection...
+Plugin_Runtime_ClipScreenshotToEvernote_Subtask=Transferring data...
+Plugin_Runtime_ClipScreenshotToEvernote_OutOfDate=\ is out of date. Please upgrade to the latest version.
+Plugin_Runtime_ClipScreenshotToEvernote_Hint=Double click to clip, right-click/Esc to escape
 
-Plugin.Runtime.AuthExpired.Message=Eemory is no longer authorized to access Evernote account. Please re-authorize Eemory.
-Plugin.Runtime.AuthExpired.Title=Authorization Expired
-Plugin.Runtime.CreateNewNote=No existing note found, will create a new one.
-Plugin.Runtime.ClipToDefault=No existing notebook found, will clip to default.
-Plugin.Runtime.CreateNewNoteWithGivenName=No existing note found, will create a new one with given name {1}.
+Plugin_Runtime_AuthExpired_Message=Eemory is no longer authorized to access Evernote account. Please re-authorize Eemory.
+Plugin_Runtime_AuthExpired_Title=Authorization Expired
+Plugin_Runtime_CreateNewNote=No existing note found, will create a new one.
+Plugin_Runtime_ClipToDefault=No existing notebook found, will clip to default.
+Plugin_Runtime_CreateNewNoteWithGivenName=No existing note found, will create a new one with given name {0}.
 
-Plugin.Error.Occurred=Error Occurred
-Plugin.Error.OutOfDate=Evernote SDK is out of date
-Plugin.Throwable.NotFatal.Message=, but not fatal, you can continue.
+Plugin_Error_Occurred=Error Occurred
+Plugin_Error_OutOfDate=Evernote SDK is out of date
+Plugin_Throwable_NotFatal=, but not fatal, you can continue.
 
 # DOM #
-DOM.Error0=the type of node being imported is not supported
-DOM.Error1=the type of node being adopted is not supported
-DOM.Error2=attribute was created from a different document than the one that created the element
-DOM.Error3=attribute is already an attribute of another Element object. The DOM user must explicitly clone Attribute nodes to re-use them in other elements
-DOM.Error4=attribute is not an attribute of the element
-DOM.Error5=An attempt was made to insert a node where it is not permitted
-DOM.Error6=An attempt was made to insert a node which was created from a different document than the one that created this node
-DOM.Error7=An attempt was made to reference a node in a context where it does not exist
-DOM.Error8=offset is negative or larger than the length of this String object, or count is negative.
-DOM.Error9=offset is negative or larger than the length of this String object
+DOM_Error0=the type of node being imported is not supported
+DOM_Error1=the type of node being adopted is not supported
+DOM_Error2=attribute was created from a different document than the one that created the element
+DOM_Error3=attribute is already an attribute of another Element object. The DOM user must explicitly clone Attribute nodes to re-use them in other elements
+DOM_Error4=attribute is not an attribute of the element
+DOM_Error5=An attempt was made to insert a node where it is not permitted
+DOM_Error6=An attempt was made to insert a node which was created from a different document than the one that created this node
+DOM_Error7=An attempt was made to reference a node in a context where it does not exist
+DOM_Error8=offset is negative or larger than the length of this String object, or count is negative.
+DOM_Error9=offset is negative or larger than the length of this String object
 
-# others #
-Throwable.IllegalArgumentException.Message=Illegal argument:
+Throwable_IllegalArgumentException_Message=Illegal argument:
