--- a/com.prairie.eevernote/src/messages.properties
+++ b/com.prairie.eevernote/src/messages.properties
@@ -12,12 +12,6 @@ Plugin_Configs_Note_Hint=type text(autosuggest) to select note, clipped content 
 Plugin_Configs_Tags_Hint=type text(autosuggest) to add tags, multiple tags are comma separated
 Plugin_Configs_Comments=Comments
 Plugin_Configs_Refresh=Refresh
-Plugin_Configs_TokenNotConfigured=Connect Eemory to Evernote (A authentication page will be opened in browser, please go there to authorize Eemory)?
-Plugin_Configs_OAuth_Title=Authorization
-Plugin_Configs_OAuth_Configure=Connect
-Plugin_Configs_OAuth_NotNow=Not Now
-Plugin_Configs_OAuth_Waiting=Waiting for the authorization...
-Plugin_Configs_OAuth_Confirm=Have finished the authorization process and continue?
 Plugin_Configs_Authenticating=Authenticating...
 Plugin_Configs_FetchingNotebooks=Fetching notebooks...
 Plugin_Configs_FetchingNotes=Fetching notes...
@@ -36,11 +30,19 @@ Plugin_Runtime_ClipScreenshotToEvernote_Subtask=Transferring data...
 Plugin_Runtime_ClipScreenshotToEvernote_OutOfDate=\ is out of date. Please upgrade to the latest version.
 Plugin_Runtime_ClipScreenshotToEvernote_Hint=Double click to clip, right-click/Esc to escape
 
-Plugin_Runtime_AuthExpired_Message=Eemory is no longer authorized to access Evernote account. Please re-authorize Eemory.
-Plugin_Runtime_AuthExpired_Title=Authorization Expired
 Plugin_Runtime_CreateNewNote=No existing note found, will create a new one.
 Plugin_Runtime_ClipToDefault=No existing notebook found, will clip to default.
 Plugin_Runtime_CreateNewNoteWithGivenName=No existing note found, will create a new one with given name {0}.
+
+Plugin_OAuth_TokenNotConfigured=Connect Eemory to Evernote (A authentication page will be opened in browser, please go there to authorize Eemory)?
+Plugin_OAuth_Title=Authorization
+Plugin_OAuth_Configure=Connect
+Plugin_OAuth_NotNow=Not Now
+Plugin_OAuth_Waiting=Waiting the authorization to complete...
+Plugin_OAuth_Confirm=Have finished the authorization process and continue?
+Plugin_OAuth_AuthExpired_Message=Eemory is no longer authorized to access Evernote account. Please re-authorize Eemory. After this the pending task will continue.
+Plugin_OAuth_AuthExpired_Title=Authorization Expired
+Plugin_OAuth_AuthExpired_ReAuth=Re-authorize
 
 Plugin_Error_Occurred=Error Occurred
 Plugin_Error_OutOfDate=Evernote SDK is out of date
