message text change

--- a/com.prairie.eemory/src/messages.properties
+++ b/com.prairie.eemory/src/messages.properties
@@ -40,7 +40,7 @@ Plugin_OAuth_Configure=Connect
 Plugin_OAuth_NotNow=Not Now
 Plugin_OAuth_Waiting=Waiting the authorization to complete...
 Plugin_OAuth_Confirm=Have finished the authorization process and continue?
-Plugin_OAuth_AuthExpired_Message=Eemory is no longer authorized to access Evernote account. Please re-authorize Eemory. After this the pending task will continue.
+Plugin_OAuth_AuthExpired_Message=Eemory is no longer authorized to access Evernote account. Please re-authorize Eemory. The pending task will continue after re-authorization.
 Plugin_OAuth_AuthExpired_Title=Authorization Expired
 Plugin_OAuth_AuthExpired_ReAuth=Re-authorize
 
