fix bug #39: More than one time to ask user to re-authorize even re-authorized already

--- a/com.prairie.eemory/src/messages.properties
+++ b/com.prairie.eemory/src/messages.properties
@@ -34,13 +34,13 @@ Plugin_Runtime_CreateNewNote=No existing note found, will create a new one.
 Plugin_Runtime_ClipToDefault=No existing notebook found, will clip to default.
 Plugin_Runtime_CreateNewNoteWithGivenName=No existing note found, will create a new one with given name {0}.
 
-Plugin_OAuth_TokenNotConfigured=Connect Eemory to Evernote (A authentication page will be opened in browser, please go there to authorize Eemory)?
+Plugin_OAuth_TokenNotConfigured=Connect Eemory to Evernote (A authentication page will be opened in default browser, please go there to authorize Eemory)?
 Plugin_OAuth_Title=Authorization
 Plugin_OAuth_Configure=Connect
 Plugin_OAuth_NotNow=Not Now
-Plugin_OAuth_Waiting=Waiting the authorization to complete...
-Plugin_OAuth_Confirm=Have finished the authorization process and continue?
-Plugin_OAuth_AuthExpired_Message=Eemory is no longer authorized to access Evernote account. Please re-authorize Eemory. The pending task will continue after re-authorization.
+Plugin_OAuth_Waiting=Waiting authorization to complete (Check browser for required operation) ...
+Plugin_OAuth_Confirm=Continue with the pending operation?
+Plugin_OAuth_AuthExpired_Message=Eemory is no longer authorized to access Evernote account. Please re-authorize Eemory. The pending operation will continue after re-authorization.
 Plugin_OAuth_AuthExpired_Title=Authorization Expired
 Plugin_OAuth_AuthExpired_ReAuth=Re-authorize
 
