--- a/com.prairie.eemory/src/messages.properties
+++ b/com.prairie.eemory/src/messages.properties
@@ -8,7 +8,7 @@ Plugin_Configs_Notebook=Notebook
 Plugin_Configs_Note=Note
 Plugin_Configs_Tags=Tags
 Plugin_Configs_Notebook_Hint=type text(autosuggest) to select notebook
-Plugin_Configs_Note_Hint=type text(autosuggest) to select note, clipped content will be inserted to the head
+Plugin_Configs_Note_Hint=type text(autosuggest) to select note , clipped content will be prepended to the note
 Plugin_Configs_Tags_Hint=type text(autosuggest) to add tags, multiple tags are comma separated
 Plugin_Configs_Comments=Comments
 Plugin_Configs_Refresh=Refresh
@@ -32,7 +32,7 @@ Plugin_Runtime_ClipScreenshotToEvernote_Hint=Double click to clip, right-click/E
 
 Plugin_Runtime_CreateNewNote=No existing note found, will create a new one.
 Plugin_Runtime_ClipToDefault=No existing notebook found, will clip to default.
-Plugin_Runtime_CreateNewNoteWithGivenName=No existing note found, will create a new one with given name {0}.
+Plugin_Runtime_CreateNewNoteWithGivenName=No existing note found, will create a new one with given name: {0}.
 
 Plugin_OAuth_TokenNotConfigured=Connect Eemory to Evernote (A authentication page will be opened in default browser, please go there to authorize Eemory)?
 Plugin_OAuth_Title=Authorization
