fix bug #33 and some other changes

--- a/com.prairie.eemory/src/messages.properties
+++ b/com.prairie.eemory/src/messages.properties
@@ -2,39 +2,32 @@
 Plugin_Configs_Shell_Title=Clip Configurations
 Plugin_Configs_QuickOrgnize_Shell_Title=Quick Organize
 Plugin_Configs_Title=Organize configurations
-Plugin_Configs_Message=Configure notebook, note, tags and comments on a global level.
+Plugin_Configs_Message=Configure notebook, note, tags and comment on a global level.
 Plugin_Configs_Organize=Organize
 Plugin_Configs_Notebook=Notebook
 Plugin_Configs_Note=Note
 Plugin_Configs_Tags=Tags
-Plugin_Configs_Notebook_Hint=type text(autosuggest) to select notebook
-Plugin_Configs_Note_Hint=type text(autosuggest) to select note , clipped content will be prepended to the note
-Plugin_Configs_Tags_Hint=type text(autosuggest) to add tags, multiple tags are comma separated
-Plugin_Configs_Comments=Comments
+Plugin_Configs_Notebook_Hint=type text(auto-suggest) to select notebook
+Plugin_Configs_Note_Hint=type(auto-suggest) to select note , clipped content will be prepended to the note
+Plugin_Configs_Tags_Hint=type(auto-suggest) to add tags, multiple tags are comma separated
+Plugin_Configs_Comments=Comment
 Plugin_Configs_Refresh=Refresh
 Plugin_Configs_Authenticating=Authenticating...
 Plugin_Configs_FetchingNotebooks=Fetching notebooks...
 Plugin_Configs_FetchingNotes=Fetching notes...
 Plugin_Configs_FetchingTags=Fetching tags...
 
-Plugin_Runtime_AddFileToEvernote=Clipping file(s)...
-Plugin_Runtime_AddFileToEvernote_Subtask=Transferring data...
-Plugin_Runtime_AddFileToEvernote_OutOfDate=\ is out of date_ Please upgrade to the latest version.
-
-Plugin_Runtime_AddSelectionToEvernote=Clipping selection...
-Plugin_Runtime_AddSelectionToEvernote_Subtask=Transferring data...
-Plugin_Runtime_AddSelectionToEvernote_OutOfDate=\ is out of date. Please upgrade to the latest version.
-
-Plugin_Runtime_ClipScreenshotToEvernote_Message=Clipping selection...
-Plugin_Runtime_ClipScreenshotToEvernote_Subtask=Transferring data...
-Plugin_Runtime_ClipScreenshotToEvernote_OutOfDate=\ is out of date. Please upgrade to the latest version.
+Plugin_Runtime_ClipFileToEvernote=Clipping file(s)...
+Plugin_Runtime_ClipSelectionToEvernote=Clipping selection...
 Plugin_Runtime_ClipScreenshotToEvernote_Hint=Double click to clip, right-click/Esc to escape
 
 Plugin_Runtime_CreateNewNote=No existing note found, will create a new one.
 Plugin_Runtime_ClipToDefault=No existing notebook found, will clip to default.
 Plugin_Runtime_CreateNewNoteWithGivenName=No existing note found, will create a new one with given name: {0}.
 
-Plugin_OAuth_TokenNotConfigured=Connect Eemory to Evernote (A authentication page will be opened in default browser, please go there to authorize Eemory)?
+Plugin_OutOfDate=Current version {0} of Eemory is no longer supported by Evernote. Please upgrade to the latest version.
+
+Plugin_OAuth_TokenNotConfigured=Connect Eemory to Evernote (A authentication page will be opened in external default browser, please go there to authorize Eemory)?
 Plugin_OAuth_Title=Authorization
 Plugin_OAuth_Configure=Connect
 Plugin_OAuth_NotNow=Not Now
@@ -46,7 +39,6 @@ Plugin_OAuth_AuthExpired_ReAuth=Re-authorize
 
 Plugin_Error_Occurred=Error Occurred
 Plugin_Error_OutOfDate=Evernote SDK is out of date
-Plugin_Throwable_NotFatal=, but not fatal, you can continue.
 
 # DOM #
 DOM_Error0=the type of node being imported is not supported
