--- a/com.prairie.eemory/src/messages.properties
+++ b/com.prairie.eemory/src/messages.properties
@@ -27,7 +27,7 @@ Plugin_Runtime_CreateNewNoteWithGivenName=No existing note found, will create a 
 
 Plugin_OutOfDate=Current version {0} of Eemory is no longer supported by Evernote. Please upgrade to the latest version.
 
-Plugin_OAuth_TokenNotConfigured=Connect Eemory to Evernote (A authentication page will be opened in external default browser, please go there to authorize Eemory)?
+Plugin_OAuth_TokenNotConfigured=Connect Eemory to Evernote (A authentication page will be opened in external default browser, which may take several minutes, and please go there to authorize Eemory)?
 Plugin_OAuth_Title=Authorization
 Plugin_OAuth_Configure=Connect
 Plugin_OAuth_NotNow=Not Now
