--- a/com.prairie.eemory/src/messages.properties
+++ b/com.prairie.eemory/src/messages.properties
@@ -31,7 +31,7 @@ Plugin_OAuth_TokenNotConfigured=Connect Eemory to Evernote (A authentication pag
 Plugin_OAuth_Title=Authorization
 Plugin_OAuth_Configure=Connect
 Plugin_OAuth_NotNow=Not Now
-Plugin_OAuth_Waiting=Waiting authorization to complete (Check browser for required operation) ...
+Plugin_OAuth_Waiting=Waiting authorization to complete...
 Plugin_OAuth_Confirm=Continue with the pending operation?
 Plugin_OAuth_AuthExpired_Message=Eemory is no longer authorized to access Evernote account. Please re-authorize Eemory. The pending operation will continue after re-authorization.
 Plugin_OAuth_AuthExpired_Title=Authorization Expired
