some code change

--- a/com.prairie.eemory/src/messages.properties
+++ b/com.prairie.eemory/src/messages.properties
@@ -39,6 +39,7 @@ Plugin_OAuth_AuthExpired_ReAuth=Re-authorize
 
 Plugin_Error_Occurred=Error Occurred
 Plugin_Error_OutOfDate=Evernote SDK is out of date
+Plugin_Error_NoFile=Not able to get file
 
 # DOM #
 DOM_Error0=the type of node being imported is not supported
