--- a/com.prairie.eemory/src/messages.properties
+++ b/com.prairie.eemory/src/messages.properties
@@ -54,3 +54,4 @@ DOM_Error8=offset is negative or larger than the length of this String object, o
 DOM_Error9=offset is negative or larger than the length of this String object
 
 Throwable_IllegalArgumentException_Message=Illegal argument:
+Throwable_NotSerializable_Message={0} is not serializable
