fix prompt text

--- a/com.prairie.eemory/src/messages.properties
+++ b/com.prairie.eemory/src/messages.properties
@@ -21,9 +21,9 @@ Plugin_Runtime_ClipFileToEvernote=Clipping file(s)...
 Plugin_Runtime_ClipSelectionToEvernote=Clipping selection...
 Plugin_Runtime_ClipScreenshotToEvernote_Hint=Double click to clip, right-click/Esc to escape
 
-Plugin_Runtime_CreateNewNote=No existing note found, will create a new one.
-Plugin_Runtime_ClipToDefault=No existing notebook found, will clip to default.
-Plugin_Runtime_CreateNewNoteWithGivenName=No existing note found, will create a new one with given name: {0}.
+Plugin_Runtime_CreateNewNote=No existing note found, create a new one?
+Plugin_Runtime_ClipToDefault=No existing notebook found, clip to default?
+Plugin_Runtime_CreateNewNoteWithGivenName=No existing note found, create a new one with given name: {0}?
 
 Plugin_OutOfDate=Current version {0} of Eemory is no longer supported by Evernote. Please upgrade to the latest version.
 
@@ -53,5 +53,5 @@ DOM_Error7=An attempt was made to reference a node in a context where it does no
 DOM_Error8=offset is negative or larger than the length of this String object, or count is negative.
 DOM_Error9=offset is negative or larger than the length of this String object
 
-Throwable_IllegalArgumentException_Message=Illegal argument:
+Throwable_IllegalArgumentException_Message=Illegal argument: {0}
 Throwable_NotSerializable_Message={0} is not serializable
