--- a/com.prairie.eemory/src/messages.properties
+++ b/com.prairie.eemory/src/messages.properties
@@ -21,9 +21,9 @@ Plugin_Runtime_ClipFileToEvernote=Clipping file(s)...
 Plugin_Runtime_ClipSelectionToEvernote=Clipping selection...
 Plugin_Runtime_ClipScreenshotToEvernote_Hint=Double click to clip, right-click/Esc to escape
 
-Plugin_Runtime_CreateNewNote=No existing note found, create a new one?
-Plugin_Runtime_ClipToDefault=No existing notebook found, clip to default?
-Plugin_Runtime_CreateNewNoteWithGivenName=No existing note found, create a new one with given name: {0}?
+Plugin_Runtime_CreateNewNote=No existing note found to prepend, clip to a new note?
+Plugin_Runtime_ClipToDefault=No existing notebook found, clip to default notebook?
+Plugin_Runtime_CreateNewNoteWithGivenName=No existing note found to prepend, clip to a new note with given name: {0}?
 
 Plugin_OutOfDate=Current version {0} of Eemory is no longer supported by Evernote. Please upgrade to the latest version.
 
