update message for NoDataFoundException

--- a/com.prairie.eemory/src/messages.properties
+++ b/com.prairie.eemory/src/messages.properties
@@ -39,7 +39,8 @@ Plugin_OAuth_AuthExpired_ReAuth=Re-authorize
 
 Plugin_Error_Occurred=Error Occurred
 Plugin_Error_OutOfDate=Evernote SDK is out of date
-Plugin_Error_NoFile=Not able to get file
+Plugin_Error_NoFile=No file found to clip
+Plugin_Error_NoText=No text found to clip
 
 # DOM #
 DOM_Error0=the type of node being imported is not supported
