--- a/com.prairie.eemory/src/messages.properties
+++ b/com.prairie.eemory/src/messages.properties
@@ -27,7 +27,7 @@ Plugin_Runtime_CreateNewNoteWithGivenName=No existing note found to prepend, cli
 
 Plugin_OutOfDate=Current version {0} of Eemory is no longer supported by Evernote. Please upgrade to the latest version.
 
-Plugin_OAuth_TokenNotConfigured=Connect Eemory to Evernote (A authentication page will be opened in external default browser, which may take several minutes, and please go there to authorize Eemory)?
+Plugin_OAuth_TokenNotConfigured=Connect Eemory to Evernote: A authentication page will be opened in external default browser, which may take several minutes, and please go there to authorize Eemory. Would you like to connect now?
 Plugin_OAuth_Title=Authorization
 Plugin_OAuth_Configure=Connect
 Plugin_OAuth_NotNow=Not Now
@@ -36,6 +36,9 @@ Plugin_OAuth_Confirm=Continue with the pending operation?
 Plugin_OAuth_AuthExpired_Message=Eemory is no longer authorized to access Evernote account. Please re-authorize Eemory. The pending operation will continue after re-authorization.
 Plugin_OAuth_AuthExpired_Title=Authorization Expired
 Plugin_OAuth_AuthExpired_ReAuth=Re-authorize
+Plugin_OAuth_DoItManually=Could not open a web browser, please click on the 'Copy Authorization URL' button below to copy the authorization URL and open it in web browser manually, and then authorize Eemory.
+Plugin_OAuth_Cancel=Cancel
+Plugin_OAuth_Copy=Copy Authorization URL
 
 Plugin_Error_Occurred=Error Occurred
 Plugin_Error_OutOfDate=Evernote SDK is out of date
