--- a/com.prairie.eemory/src/messages.properties
+++ b/com.prairie.eemory/src/messages.properties
@@ -33,7 +33,7 @@ Plugin_OAuth_Configure=Connect
 Plugin_OAuth_NotNow=Not Now
 Plugin_OAuth_Waiting=Waiting authorization to complete...
 Plugin_OAuth_Confirm=Continue with the pending operation?
-Plugin_OAuth_AuthExpired_Message=Eemory is no longer authorized to access Evernote account. Please re-authorize Eemory. The pending operation will continue after re-authorization.
+Plugin_OAuth_AuthExpired_Message=Eemory is no longer authorized to access Evernote account. Please re-authorize Eemory. The pending operation will continue after re-authorization. Would you like to re-authorize now?
 Plugin_OAuth_AuthExpired_Title=Authorization Expired
 Plugin_OAuth_AuthExpired_ReAuth=Re-authorize
 Plugin_OAuth_DoItManually=Could not open a web browser, please click on the 'Copy Authorization URL' button below to copy the authorization URL and open it in web browser manually, and then authorize Eemory.
