add some debug information

--- a/com.prairie.eemory/src/messages.properties
+++ b/com.prairie.eemory/src/messages.properties
@@ -59,3 +59,8 @@ DOM_Error9=offset is negative or larger than the length of this String object
 
 Throwable_IllegalArgumentException_Message=Illegal argument: {0}
 Throwable_NotSerializable_Message={0} is not serializable
+
+# Debug information
+Plugin_Debug_Default_Font_Style=Default font style: {0}
+Plugin_Debug_StyleRange_Font_Style=Style range font style: {0}
+Plugin_Debug_FinalConcluded_Font_Style=Final concluded font style: {0}
