--- a/com.prairie.eemory/src/messages.properties
+++ b/com.prairie.eemory/src/messages.properties
@@ -64,3 +64,4 @@ Throwable_NotSerializable_Message={0} is not serializable
 Plugin_Debug_Default_Font_Style=Default font style: {0}
 Plugin_Debug_StyleRange_Font_Style=Style range font style: {0}
 Plugin_Debug_FinalConcluded_Font_Style=Final concluded font style: {0}
+Plugin_Debug_NewClipper=The cached clipper is no longer valid, created a new one with token: {0}
