fix bug ##49: Add notebook info for create new note prompt  enhancement

--- a/com.prairie.eemory/src/messages.properties
+++ b/com.prairie.eemory/src/messages.properties
@@ -1,4 +1,6 @@
 # Messages #
+# Comment: single quote ' is as escape character #
+
 Plugin_Configs_Shell_Title=Clip Configurations
 Plugin_Configs_QuickOrgnize_Shell_Title=Quick Organize
 Plugin_Configs_Title=Organize configurations
@@ -22,8 +24,11 @@ Plugin_Runtime_ClipSelectionToEvernote=Clipping selection...
 Plugin_Runtime_ClipScreenshotToEvernote_Hint=Double click to clip, right-click/Esc to escape
 
 Plugin_Runtime_CreateNewNote=No existing note found to prepend, clip to a new note?
+Plugin_Runtime_CreateNewNoteInNotebook=No existing note found to prepend, clip to a new note in {0} notebook?
 Plugin_Runtime_ClipToDefault=No existing notebook found, clip to default notebook?
-Plugin_Runtime_CreateNewNoteWithGivenName=No existing note found to prepend, clip to a new note with given name: {0}?
+Plugin_Runtime_CreateNewNoteWithGivenName=No existing note found to prepend, clip to a new note with given name ''{0}''?
+Plugin_Runtime_CreateNewNoteWithGivenNameInNotebook=No existing note found to prepend, clip to a new note with given name ''{0}'' in {1} notebook?
+Plugin_Runtime_ClipToNotebook_Default=default
 
 Plugin_OutOfDate=Current version {0} of Eemory is no longer supported by Evernote. Please upgrade to the latest version.
 
@@ -68,3 +73,4 @@ Plugin_Debug_NewClipper=The cached clipper is no longer valid, created a new one
 Plugin_Debug_IsFullScreenSupported=Non-Windows OS support full screen: {0}
 Plugin_Debug_CapturedScreenshot=Captured: {0}
 Plugin_Debug_NoScreenCaptureProcessor=No processor set to process screen capture
+# -End- #
